src/third_party/nasm/travis/test/br3200749.stderr
./travis/test/br3200749.asm:4: error: label, instruction or prefix expected at start of line, found `%'
./travis/test/br3200749.asm:6: error: label, instruction or prefix expected at start of line, found `%'
